# mergedna

./: .dockerignore  .gitignore  Dockerfile  README.md  README_orig.md  docker-compose.yml  pyproject.toml
docs/infra_notes/: amtm.md  attention_backend.md  local_merge_segmentation.md
mergedna/: amtm.py  common.py  config.py  data_hf.py  dna_vocab.py  flash_attention_patch.py  local_merge.py  losses.py  model.py  transformer.py
mergedna/infra/: checkpoint.py  logging.py  wandb_logger.py
nanochat_infra/: flash_attention.py
report/: MergeDNA_Implementation_Report.md
scripts/: mergedna_pretrain.py  pretrain_smoke.py  smoke.py
tests/: test_41_42_attention_backend.py  test_43_layerwise_merge_schedule.py  test_43_local_merge_sparse_S.py  test_43_local_merge_tome_offset.py  test_44_latent_merge_grouping.py  test_45_amtm_forward_contract.py  test_45_amtm_sampler.py  test_5xx_three_pass_training_contract.py  test_amtm_sampler.py  test_attention_backend.py  test_attention_fallback.py  test_forward_amtm_contract.py  test_infra_checkpoint.py  test_local_merge.py  test_nanochat_infra_import.py  tests_41_42_attention_backend.py
