[project]
name = "mergedna"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "torch==2.9.1",
    "datasets>=4.0.0",
    "biopython>=1.83",
    "zstandard>=0.25.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project.optional-dependencies]
wandb = [
    "wandb>=0.17.0",
]